enity too large bug fixed, hompage lazyloading added

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -679,6 +679,8 @@ input[type=number]::-webkit-outer-spin-button {
     font-size: 2.1rem;
     font-weight: bold;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+    display: inline-block;
+    margin: .6rem .9rem;
 }
 
 @media screen and (max-width: 991px) {
